force-app/main/default/objects/Support_Category__mdt/Support_Category__mdt.object-meta.xml
<CustomObject>
    <label>Support Category</label>
    <pluralLabel>Support Categories</pluralLabel>
</CustomObject>