force-app/main/default/objects/Support_Category__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>The Data Category API Name.</description>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>