force-app/main/default/objects/Support_Category__mdt/fields/Gated__c.field-meta.xml
<CustomField>
    <fullName>Gated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>False if available for Guests, True if not.</description>
    <label>Gated</label>
    <type>Checkbox</type>
</CustomField>