force-app/main/default/objects/Support_Category__mdt/fields/Has_Suggested_Articles__c.field-meta.xml
<CustomField>
    <fullName>Has_Suggested_Articles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the Category has Suggested Articles and is displayed in the Suggested Articles list, false if not.</description>
    <label>Has Suggested Articles</label>
    <type>Checkbox</type>
</CustomField>