force-app/main/default/objects/Support_Category__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>The Category Icon (deprecated)</description>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>